Bug 448113 - xdg-desktop-portal-kde is missing bug report address
Summary: xdg-desktop-portal-kde is missing bug report address
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
: 440167 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-08 12:39 UTC by ratijas
Modified: 2022-01-17 20:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
xdg-desktop-portal-kde does not provide a bug reporting address (53.66 KB, image/png)
2022-01-08 12:39 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-01-08 12:39:24 UTC
Created attachment 145219 [details]
xdg-desktop-portal-kde does not provide a bug reporting address

SUMMARY

xdg-desktop-portal-kde has crashed, and «The KDE Crash Handler» has launched, but it could not automatically send a report, because apparently xdg-desktop-portal-kde does not provide a bug reporting address.

STEPS TO REPRODUCE
1. Crash the portal
2. Wait for The KDE Crash Handler to open 

OBSERVED RESULT

The KDE Crash Handler tells you that "You cannot report this error, …»
and the «Report Bug» button is disabled.

EXPECTED RESULT

Like most of KDE apps, xdg-desktop-portal-kde should provide metadata for crash handler.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.15.12-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-01-08 14:13:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/58
Comment 2 Nicolas Fella 2022-01-11 12:58:14 UTC
Git commit 0698e1fc48c1c98c0cff77a747009fcb8ef1e7d7 by Nicolas Fella.
Committed on 08/01/2022 at 14:13.
Pushed by nicolasfella into branch 'master'.

Add KAboutData

This is needed for DrKonqi to work

M  +5    -0    CMakeLists.txt
M  +7    -1    src/xdg-desktop-portal-kde.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/0698e1fc48c1c98c0cff77a747009fcb8ef1e7d7
Comment 3 Nicolas Fella 2022-01-17 20:39:42 UTC
*** Bug 440167 has been marked as a duplicate of this bug. ***