Add KAboutData

This is needed for DrKonqi to work

BUG: 448113